# NORFAB

./: .gitignore  404.html  CIRCUITS_BRAINSTORM_APPROACHES.md  CIRCUITS_OPTIMIZATION_IMPLEMENTATION.md  CIRCUITS_PERFORMANCE_ANALYSIS.md  CLAUDE.md  README.md  index.html  install_norfab_windows.ps1  mkdocs.yml  norfab.llm  objects.inv  pyproject.toml  sitemap.xml  tags.json
.github/: FUNDING.yml
.github/agents/: norfab.agent.md
.github/workflows/: publish-docker-images.yml
api_reference_clients_nfcli_client/: index.html
api_reference_clients_robot_client/: index.html
api_reference_core_norfab_broker/: index.html
api_reference_core_norfab_client/: index.html
api_reference_core_norfab_exceptions/: index.html
api_reference_core_norfab_nfapi/: index.html
api_reference_core_norfab_simple_inventory/: index.html
api_reference_core_norfab_worker/: index.html
clients_nfcli_overview/: index.html
clients_overview/: index.html
clients_python_api_overview/: index.html
clients_robot_client_overview/: index.html
customization/norfab_hooks/: index.html
customization/service_plugin_local/: index.html
customization/service_plugin_module/: index.html
customization/service_plugin_overview/: index.html
development/adr_fastmcp_bearer_authentication/: index.html
development/adr_mcp_task_prompts_plan/: index.html
development/adr_mcp_tool_annotations_plan/: index.html
development/adr_netbox_bgp_create_update_tasks_plan/: index.html
development/adr_netbox_check_sync_plan/: index.html
development/adr_netbox_sync_device_interfaces_plan/: index.html
development/adr_netbox_sync_device_inventory_plan/: index.html
development/adr_nfapi_client_first_startup/: index.html
development/adr_norfab_aaa_security_architecture/: index.html
development/adr_norfab_interactive_client/: index.html
development/adr_norfab_logging_isolation/: index.html
development/adr_nornir_snmp_tasks/: index.html
development/adr_tasks_pydantic_models_guide/: index.html
development/documentation_style_guide/: index.html
development/file_streaming_fetch_file/: index.html
development/norfab_docker_development/: index.html
docker/norfab-docker/: .env  Dockerfile.norfab.netbox  README.md  docker-compose.yaml
docker/norfab-docker-build/: Dockerfile.norfab.aio  Dockerfile.norfab.broker  Dockerfile.norfab.fakenos  Dockerfile.norfab.fastapi  Dockerfile.norfab.fastmcp  Dockerfile.norfab.netbox  Dockerfile.norfab.nornir  Dockerfile.norfab.workflow  README.md
docker/norfab-docker-dev/: .env  Dockerfile.norfab.broker  Dockerfile.norfab.netbox  Dockerfile.norfab.nornir  README.md  docker-compose.yaml
docs/: api_reference_clients_nfcli_client.md  clients_nfcli_overview.md  clients_overview.md  clients_python_api_overview.md  index.md  norfab_changelog (2).md  norfab_changelog.md  norfab_docker_deployment.md  norfab_getting_started.md  norfab_installation.md  norfab_why_use_norfab.md  reference_architecture_nfp.md  reference_norfab_inventory.md  services_norfab_file_service.md  services_overview.md  tags.md
docs/customization/: service_plugin_local.md  service_plugin_module.md
docs/development/: adr_fastmcp_bearer_authentication.md  adr_mcp_task_prompts_plan.md  adr_mcp_tool_annotations_plan.md  adr_netbox_bgp_create_update_tasks_plan.md  adr_netbox_check_sync_plan.md  adr_netbox_sync_device_interfaces_plan.md  adr_netbox_sync_device_inventory_plan.md  adr_nfapi_client_first_startup.md  adr_norfab_aaa_security_architecture.md  adr_norfab_interactive_client.md  adr_norfab_logging_isolation.md  adr_nornir_snmp_tasks.md  adr_tasks_pydantic_models_guide.md  documentation_style_guide.md  file_streaming_fetch_file.md  norfab_docker_development.md  tasks_pydantic_models_guide.md
docs/images/: ArcOverview.drawio
docs/javascripts/: mermaid.js
docs/stylesheets/: extra.css
docs/testing/: netbox_service_tests.md  norfab_testing_framework.md
docs/tutorials/: norfab_docker_deployment.md  norfab_vscode_mcp_integration.md
javascripts/: mermaid.js
norfab/clients/: picle_shell_client.py  robot_client.py  streamlit_client.py  textual_client.py
norfab/core/: NFP.py  agent.py  broker.py  client.py  inventory.py  keepalives.py  nfapi.py  security.py  worker.py
norfab/models/: __init__.py  norfab_configuration.py  norfab_configuration_logging.py
norfab/utils/: markdown_results.py  nfcli.py  platform_map.py  text.py
norfab/workers/: agent_worker.py  containerlab_worker.py  fakenos_worker.py  fastapi_worker.py  fastmcp_worker.py  llamaindex_worker.py  netbox_worker.py  nornir_worker.py  pyats_worker.py  workflow_worker.py
norfab_changelog/: index.html
norfab_distributed_deployment/: index.html
norfab_docker_deployment/: index.html
norfab_getting_started/: index.html
norfab_help_with_norfab/: index.html
norfab_installation/: index.html
norfab_why_use_norfab/: index.html
reference_architecture_nfp/: index.html
reference_architecture_norfab/: index.html
reference_norfab_events_subsystem/: index.html
reference_norfab_inventory/: index.html
reference_norfab_jobs_subsystem/: index.html
reference_norfab_mmi_subsystem/: index.html
search/: search_index.json
services_norfab_events_service/: index.html
services_norfab_file_service/: index.html
services_norfab_inventory_service/: index.html
services_norfab_jobs_service/: index.html
services_norfab_mmi/: index.html
services_overview/: index.html
tags/: index.html
testing/netbox_service_tests/: index.html
testing/norfab_testing_framework/: index.html
tests/: __init__.py  conftest.py  interfaces_JSON_DATA.json  interfaces_parse_data.json  netbox_data.py  test_containerlab_service.py  test_dummy_service_plugin.py  test_fakenos_service.py  test_fastapi_service.py  test_fastmcp_service.py  test_filesharing_service.py  test_netbox_service.py  test_netbox_service_crud_tasks.py  test_nfcli_shell_client.py  test_nfcli_shell_common.py  test_nornir_service.py  test_nornir_service_juniper_integration.py  test_results.txt  test_workflow_service.py
tests/core/: test_broker.py  test_client.py  test_client_agent.py  (+3 more)
(+516 files in other folders)
