[project]
name = "norfab"

[tool.poetry]
name = "norfab"
version = "0.15.4"
description = "Network Automations Fabric [NorFab] - communication networks automations"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
maintainers = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
homepage = "https://github.com/norfablabs/NORFAB"
repository = "https://github.com/norfablabs/NORFAB"
documentation = "https://docs.norfablabs.com"
keywords = ["Network", "Automation", "DevOps"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
# Core Libs
python = ">=3.10,<=3.14"
pyyaml = "6.0.3"
pyzmq = "27.1.0"
psutil = "7.2.2"
tornado = "6.5.4"
jinja2 = "3.1.6"
pydantic = "2.12.5"
mdutils = "1.8.1"

# PICLE Client Dependencies
picle = { version = "0.10.0", optional = true }
rich = { version = "14.3.2", optional = true }
tabulate = { version = "0.9.0", optional = true }
pyreadline3 = {version = "3.5.4", optional = true }

# Nornir Service Dependencies
nornir = { version = "3.5.0", optional = true }
nornir-salt = { version = "0.23.*", optional = true }
cerberus = { version = "1.3.8", optional = true }
jmespath = { version = "1.1.0", optional = true }
napalm = { version = "5.1.0", optional = true }
ncclient = { version = "0.7.0", optional = true }
netmiko = { version = "4.6.0", optional = true }
nornir-napalm = { version = "0.5.0", optional = true }
nornir-netmiko = { version = "1.0.1", optional = true }
nornir-scrapli = { version = "2025.01.30", optional = true }
ntc-templates = { version = "8.1.0", optional = true }
paramiko = { version = "4.0.0", optional = true }
pygnmi = { version = "0.8.15", optional = true }
puresnmp = { version = "2.0.1", optional = true, extras = ['crypto'] }
requests = { version = "2.32.5", optional = true }
scrapli = { version = "2025.01.30", optional = true }
scrapli-community = { version = "2025.01.30", optional = true }
scrapli-netconf = { version = "2026.1.12", optional = true }
ttp = { version = "0.10.0", optional = true }
ttp-templates = { version = "0.3.*", optional = true }
xmltodict = { version = "1.0.2", optional = true }
lxml = { version = "6.0.2", optional = true }
textfsm = { version = "2.1.0", optional = true }
N2G = { version = "0.3.3", optional = true }
dnspython = { version = "2.8.0", optional = true }
pythonping = { version = "1.1.4", optional = true }
mcp = { version = "1.26.0", optional = true,  python = ">=3.10,<3.12" }

# Robot Client Dependencies
robotframework = { version = "7.4.1", optional = true }

# Agent Service Dependencies
langchain = { version = "1.2.10", optional = true }
langchain-community = { version = "0.4.1", optional = true }
langchain-ollama = { version = "1.0.1", optional = true }
ollama = { version = "0.6.1", optional = true }

# Netbox Service Dependencies
diskcache = { version = "5.6.3", optional = true }
pynetbox = { version = "7.6.1", optional = true }

# FastAPI Service Dependencies
fastapi = { version = "0.129.0", optional = true, extras = ["standard"] }
uvicorn = { version = "0.40.0", optional = true }
python-multipart = { version = "0.0.22", optional = true }

# docs dependencies
mkdocs = { version = "*", optional = true }
mkdocs-material = { version = "*", optional = true }
mkdocs-material-extensions = { version = "*", optional = true }
mkdocstrings = { version = "*", extras = ["python"], optional = true } 
pygments = { version = "*", optional = true }
pymdown-extensions = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."norfab.workers"]
"nornir" = "norfab.workers.nornir_worker:NornirWorker"
"netbox" = "norfab.workers.netbox_worker.netbox_worker:NetboxWorker"
"fastapi" = "norfab.workers.fastapi_worker:FastAPIWorker"
"agent" = "norfab.workers.agent_worker.agent_worker:AgentWorker"
"workflow" = "norfab.workers.workflow_worker:WorkflowWorker"
"containerlab" = "norfab.workers.containerlab_worker:ContainerlabWorker"
"fastmcp" = "norfab.workers.fastmcp_worker:FastMCPWorker"
"filesharing" = "norfab.workers.filesharing_worker.filesharing_worker:FileSharingWorker"

[tool.poetry.scripts]
nfcli = 'norfab.utils.nfcli:nfcli'

[tool.poetry.extras]
nfcli = [
    "picle",
    "rich",
    "tabulate",
    "pydantic",
    "nornir-salt",
    "pyreadline3"
]
nornirservice = [
    "nornir",
    "nornir-salt",
    "cerberus",
    "jmespath",
    "napalm",
    "ncclient",
    "netmiko",
    "nornir-napalm",
    "nornir-netmiko",
    "nornir-scrapli",
    "ntc-templates",
    "paramiko",
    "pygnmi",
    "puresnmp",
    "requests",
    "scrapli",
    "scrapli-community",
    "scrapli-netconf",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "lxml",
    "textfsm",
    "N2G",
    "dnspython",
    "pythonping",
    "tabulate",
    "pydantic",
]
netboxservice = [
    "requests",
    "pynetbox",
    "diskcache"
]
fastapiservice = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "diskcache"
]
robot = [
    "robot"
]
agentservice = [
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "ollama",
]
fastmcpservice = [
    "mcp"
]
full = [
    "picle",
    "rich",
    "tabulate",
    "pydantic",
    "nornir",
    "nornir-salt",
    "cerberus",
    "jmespath",
    "napalm",
    "ncclient",
    "netmiko",
    "nornir-napalm",
    "nornir-netmiko",
    "nornir-scrapli",
    "ntc-templates",
    "paramiko",
    "pygnmi",
    "puresnmp",
    "requests",
    "scrapli",
    "scrapli-community",
    "scrapli-netconf",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "lxml",
    "textfsm",
    "N2G",
    "dnspython",
    "pythonping",
    "tabulate",
    "pydantic",
    "requests",
    "pynetbox",
    "diskcache",
    "robotframework",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "ollama",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "mcp"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "pygments",
    "pymdown-extensions",
]

[tool.ruff.lint]
ignore = [
    "E712", # true-false-comparison
    "E722", # Do not use bare `except`
]

[tool.ruff.lint.isort]
case-sensitive = true