[project]
name = "norfab"

[tool.poetry]
name = "norfab"
version = "0.20.1"
description = "Network Automations Fabric [NorFab] - communication networks automations"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
maintainers = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
homepage = "https://github.com/norfablabs/NORFAB"
repository = "https://github.com/norfablabs/NORFAB"
documentation = "https://docs.norfablabs.com"
keywords = ["Network", "Automation", "DevOps"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
# Core Libs
python = ">=3.10,<=3.14"
pyyaml = "6.0.3"
pyzmq = "27.1.0"
psutil = "7.2.2"
tornado = "6.5.7"
jinja2 = "3.1.6"
pydantic = "2.13.4"
mdutils = "1.8.1"
orjson = "3.11.9"

# PICLE NFCLI Shell Dependencies
picle = { version = "0.12.2", optional = true }
rich = { version = "15.0.0", optional = true }
tabulate = { version = "0.10.0", optional = true }
pyreadline3 = {version = "3.5.6", platform = "win32", optional = true }

# Nornir Service Dependencies
nornir = { version = "3.5.0", optional = true }
nornir-salt = { version = "0.23.*", optional = true }
cerberus = { version = "1.3.8", optional = true }
jmespath = { version = "1.1.0", optional = true }
napalm = { version = "5.1.0", optional = true }
ncclient = { version = "0.7.0", optional = true }
netmiko = { version = "4.7.0", optional = true }
nornir-napalm = { version = "0.5.0", optional = true }
nornir-netmiko = { version = "1.0.1", optional = true }
nornir-scrapli = { version = "2025.1.30", optional = true }
ntc-templates = { version = "9.1.0", optional = true }
paramiko = { version = "<=4.0.0", optional = true }
pygnmi = { version = "0.8.15", optional = true }
puresnmp = { version = "2.0.1", optional = true, extras = ['crypto'] }
requests = { version = "2.34.2", optional = true }
scrapli = { version = "2026.2.20", optional = true }
scrapli-community = { version = "2025.1.30", optional = true }
scrapli-netconf = { version = "2026.1.12", optional = true }
ttp = { version = "0.10.1", optional = true }
ttp-templates = { version = ">=0.5.8", optional = true }
xmltodict = { version = "1.0.4", optional = true }
lxml = { version = "6.1.1", optional = true }
textfsm = { version = "2.1.0", optional = true }
textual = { version = "8.2.7", optional = true }
N2G = { version = "0.3.3", optional = true }
dnspython = { version = "2.8.0", optional = true }
pythonping = { version = "1.1.4", optional = true }
mcp = { version = "1.27.2", optional = true }

# Robot Client Dependencies
robotframework = { version = "7.4.2", optional = true }

# Agent Service Dependencies
langchain = { version = "1.3.4", optional = true }
langchain-community = { version = "0.4.2", optional = true }
langchain-ollama = { version = "1.1.0", optional = true }
langchain-openai = { version = ">=0.2", optional = true }
langchain-anthropic = { version = ">=0.2", optional = true }
langchain-mcp-adapters = { version = ">=0.1", optional = true }
langgraph = { version = ">=0.2", optional = true }
ollama = { version = "0.6.2", optional = true }
datamodel-code-generator = { version = "0.61.0", optional = true }
langgraph-checkpoint-sqlite = { version = "3.1.0", optional = true }

# Netbox Service Dependencies
diskcache = { version = "5.6.3", optional = true }
pynetbox = { version = "7.7.0", optional = true }
httpx = { version = "0.28.1", optional = true }
deepdiff = { version = "9.1.0", optional = true }

# FastAPI Service Dependencies
fastapi = { version = "0.136.3", optional = true, extras = ["standard"] }
uvicorn = { version = "0.49.0", optional = true }
python-multipart = { version = "0.0.32", optional = true }

# FakeNOS Service Dependencies
fakenos = { version = "1.0.1", optional = true, python = ">=3.10,<3.13" }

# docs dependencies
mkdocs = { version = "*", optional = true }
mkdocs-material = { version = "*", optional = true }
mkdocs-material-extensions = { version = "*", optional = true }
mkdocstrings = { version = "*", extras = ["python"], optional = true } 
pygments = { version = "*", optional = true }
pymdown-extensions = { version = "*", optional = true }
yfiles-graphs-for-streamlit = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."norfab.workers"]
"nornir" = "norfab.workers.nornir_worker.nornir_worker:NornirWorker"
"netbox" = "norfab.workers.netbox_worker.netbox_worker:NetboxWorker"
"fastapi" = "norfab.workers.fastapi_worker.fastapi_worker:FastAPIWorker"
"agent" = "norfab.workers.agent_worker.agent_worker:AgentWorker"
"workflow" = "norfab.workers.workflow_worker.workflow_worker:WorkflowWorker"
"containerlab" = "norfab.workers.containerlab_worker.containerlab_worker:ContainerlabWorker"
"fastmcp" = "norfab.workers.fastmcp_worker.fastmcp_worker:FastMCPWorker"
"filesharing" = "norfab.workers.filesharing_worker.filesharing_worker:FileSharingWorker"
"fakenos" = "norfab.workers.fakenos_worker.fakenos_worker:FakeNOSWorker"

[tool.poetry.scripts]
nfcli = 'norfab.utils.nfcli:nfcli'

[tool.poetry.extras]
nfcli = [
    "picle",
    "rich",
    "tabulate",
    "pydantic",
    "pyreadline3"
]
nornirservice = [
    "nornir",
    "nornir-salt",
    "cerberus",
    "jmespath",
    "napalm",
    "ncclient",
    "netmiko",
    "nornir-napalm",
    "nornir-netmiko",
    "nornir-scrapli",
    "ntc-templates",
    "paramiko",
    "pygnmi",
    "puresnmp",
    "requests",
    "scrapli",
    "scrapli-community",
    "scrapli-netconf",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "lxml",
    "textfsm",
    "N2G",
    "dnspython",
    "pythonping",
    "tabulate",
    "pydantic",
]
netboxservice = [
    "requests",
    "pynetbox",
    "diskcache",
    "httpx",
    "datamodel-code-generator",
    "deepdiff"
]
fastapiservice = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "diskcache"
]
robot = [
    "robotframework"
]
agentservice = [
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "ollama",
    "datamodel-code-generator"
]
clientagent = [
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "langchain-mcp-adapters",
    "fastembed",
    "qdrant-client",
    "langgraph-checkpoint-sqlite"
]
fastmcpservice = [
    "mcp",
    "diskcache"
]
fakenosservice = [
    "fakenos"
]
full = [
    "picle",
    "rich",
    "tabulate",
    "pydantic",
    "pyreadline3",
    "nornir",
    "nornir-salt",
    "cerberus",
    "jmespath",
    "napalm",
    "ncclient",
    "netmiko",
    "nornir-napalm",
    "nornir-netmiko",
    "nornir-scrapli",
    "ntc-templates",
    "paramiko",
    "pygnmi",
    "puresnmp",
    "requests",
    "scrapli",
    "scrapli-community",
    "scrapli-netconf",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "lxml",
    "textfsm",
    "N2G",
    "dnspython",
    "pythonping",
    "pynetbox",
    "diskcache",
    "httpx",
    "datamodel-code-generator",
    "deepdiff",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "robotframework",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-mcp-adapters",
    "langgraph",
    "fastembed",
    "qdrant-client",
    "langgraph-checkpoint-sqlite",
    "ollama",
    "mcp",
    "fakenos"
]
tui = [
    "textual"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "pygments",
    "pymdown-extensions",
]

[tool.ruff.lint]
ignore = [
    "E712", # true-false-comparison
    "E501", # line too long
    "ANN401", # disallow Any annotation
]
select = ["E", "F", "I", "ANN"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.pytest.ini_options]
markers = [
    "netbox: NetBox service tests",
    "graphql: NetBox GraphQL tests",
    "interfaces: NetBox interface-related tests",
    "devices: NetBox device-related tests",
    "connections: NetBox connection and topology tests",
    "inventory: NetBox inventory-related tests",
    "circuits: NetBox circuit-related tests",
    "bgp: NetBox BGP-related tests",
    "ipam: NetBox IPAM-related tests",
    "cache: NetBox cache tests",
    "containerlab: NetBox Containerlab inventory tests",
    "designs: NetBox design tests",
    "sync: NetBox sync and check tests",
    "crud: NetBox CRUD task tests",
    "task_get_inventory: NetBox get_inventory task tests",
    "task_graphql: NetBox graphql task tests",
    "task_get_interfaces: NetBox get_interfaces task tests",
    "task_update_interfaces_description: NetBox update_interfaces_description task tests",
    "task_get_devices: NetBox get_devices task tests",
    "task_get_connections: NetBox get_connections task tests",
    "task_get_topology: NetBox get_topology task tests",
    "task_get_nornir_inventory: NetBox get_nornir_inventory task tests",
    "task_get_circuits: NetBox get_circuits task tests",
    "task_get_bgp_peerings: NetBox get_bgp_peerings task tests",
    "task_inventory_models: NetBox inventory model tests",
    "task_sync_device_inventory: NetBox sync_device_inventory task tests",
    "task_sync_device_interfaces: NetBox sync_device_interfaces task tests",
    "task_create_device_interfaces: NetBox create_device_interfaces task tests",
    "task_sync_device_ip: NetBox sync_device_ip task tests",
    "task_create_ip: NetBox create_ip task tests",
    "task_cache: NetBox cache task tests",
    "task_get_containerlab_inventory: NetBox get_containerlab_inventory task tests",
    "task_create_prefix: NetBox create_prefix task tests",
    "task_create_ip_bulk: NetBox create_ip bulk task tests",
    "task_create_design: NetBox create_design task tests",
    "task_sync_bgp_peerings: NetBox sync_bgp_peerings task tests",
    "task_create_bgp_peering: NetBox create_bgp_peering task tests",
    "task_update_bgp_peering: NetBox update_bgp_peering task tests",
    "task_sync_mac_addresses: NetBox sync_mac_addresses task tests",
    "task_check_device_sync: NetBox check_device_sync task tests",
    "task_sync_all: NetBox sync_all task tests",
    "task_crud_list_objects: NetBox crud_list_objects task tests",
    "task_crud_search: NetBox crud_search task tests",
    "task_crud_read: NetBox crud_read task tests",
    "task_crud_create: NetBox crud_create task tests",
    "task_crud_update: NetBox crud_update task tests",
    "task_crud_delete: NetBox crud_delete task tests",
    "task_crud_get_changelogs: NetBox crud_get_changelogs task tests",
    "nornir: Nornir service tests",
    "containerlab: Containerlab service tests",
    "fakenos: FakeNOS service tests",
    "fastapi: FastAPI service tests",
    "fastmcp: FastMCP service tests",
    "filesharing: FileSharing service tests",
    "workflow: Workflow service tests",
    "dummy: dummy plugin service tests",
    "nfcli: NFCLI shell client tests",
    "worker: service worker health and inventory tests",
    "task: generic task execution tests",
    "tests: test-task suite tests",
    "cli: CLI task tests",
    "cfg: configuration task tests",
    "parse: parsing task tests",
    "jinja2: Jinja2 helper tests",
    "file_copy: file copy task tests",
    "runtime_inventory: runtime inventory tests",
    "netbox_ipam: NetBox IPAM integration tests",
    "snmp: SNMP task tests",
    "juniper: Juniper integration tests",
    "deploy: deploy task tests",
    "inspect: inspect task tests",
    "save: save task tests",
    "restart: restart task tests",
    "start: start task tests",
    "stop: stop task tests",
    "server: server tests",
    "auth: authentication tests",
    "tools: tool listing tests",
    "prompts: prompt tests",
    "tools_call: tool call tests",
    "list_files: list files task tests",
    "file_details: file details task tests",
    "walk: walk task tests",
    "fetch_file: fetch file task tests",
    "plugin: plugin tests",
    "run: workflow run task tests",
    "task_nornir_worker: Nornir worker tests",
    "task_nornir_cli: Nornir cli task tests",
    "task_nornir_task: Nornir task execution tests",
    "task_nornir_cfg: Nornir cfg task tests",
    "task_nornir_tests: Nornir test task tests",
    "task_nornir_network: Nornir network task tests",
    "task_nornir_parse: Nornir parse task tests",
    "task_nornir_jinja2: Nornir Jinja2 tests",
    "task_nornir_file_copy: Nornir file copy task tests",
    "task_nornir_runtime_inventory: Nornir runtime inventory tests",
    "task_nornir_netbox_ipam: Nornir NetBox IPAM integration tests",
    "task_nornir_snmp: Nornir SNMP task tests",
    "task_nornir_juniper: Nornir Juniper integration tests",
    "task_containerlab_worker: Containerlab worker tests",
    "task_containerlab_deploy: Containerlab deploy task tests",
    "task_containerlab_inspect: Containerlab inspect task tests",
    "task_containerlab_save: Containerlab save task tests",
    "task_containerlab_restart: Containerlab restart task tests",
    "task_containerlab_get_nornir_inventory: Containerlab get_nornir_inventory task tests",
    "task_containerlab_deploy_netbox: Containerlab deploy_netbox task tests",
    "task_fakenos_worker: FakeNOS worker tests",
    "task_fakenos_start: FakeNOS start task tests",
    "task_fakenos_inspect: FakeNOS inspect task tests",
    "task_fakenos_restart: FakeNOS restart task tests",
    "task_fakenos_get_nornir_inventory: FakeNOS get_nornir_inventory task tests",
    "task_fakenos_stop: FakeNOS stop task tests",
    "task_fastapi_worker: FastAPI worker tests",
    "task_fastapi_server: FastAPI server tests",
    "task_fastmcp_worker: FastMCP worker tests",
    "task_fastmcp_auth: FastMCP auth tests",
    "task_fastmcp_get_tools: FastMCP get_tools task tests",
    "task_fastmcp_prompts: FastMCP prompt tests",
    "task_fastmcp_tools_call: FastMCP tool call tests",
    "task_filesharing_worker: FileSharing worker tests",
    "task_filesharing_list_files: FileSharing list_files task tests",
    "task_filesharing_file_details: FileSharing file_details task tests",
    "task_filesharing_walk: FileSharing walk task tests",
    "task_filesharing_fetch_file: FileSharing fetch_file task tests",
    "task_workflow_worker: Workflow worker tests",
    "task_workflow_run: Workflow run task tests",
    "task_dummy_plugin: dummy plugin tests",
]
